Apply Language Engine formatter under style=intellij
LE format pass applied via harness /format/apply_all against the
current categorization model (engine commit f13d27cb):

  - 5779 files evaluated
  - 3113 written (changed)
  - 2666 no change
  - 0 failures

Cross-corpus categorization accuracy at the engine HEAD used for
this pass:

  - kafka:  5611 / 5627 = 99.72%
  - hollow: 2051 / 2051 = 100.00%
  - eureka:  242 /  242 = 100.00%
  - combined: 99.80%

Changes from prior LE-format pass (a1e4256fa2): LAMBDA_BODY edge
category captures lambda body wraps as a first-class continuation;
trailing-only-close-paren MI_ARGS suppression prevents over-firing
for chains inside trailing-close-paren args. Net +11 cases match IJ
output on kafka relative to the prior pass.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>