@@ -267,7 +267,7 @@ public final class AssignmentTestUtils {
                                            final Set<TaskId> prevTasks,
                                            final Set<TaskId> standbyTasks) {
         return new SubscriptionInfo(
-            LATEST_SUPPORTED_VERSION, LATEST_SUPPORTED_VERSION, processId, null, getTaskOffsetSums(prevTasks, standbyTasks), (byte) 0, 0, EMPTY_CLIENT_TAGS);
+                LATEST_SUPPORTED_VERSION, LATEST_SUPPORTED_VERSION, processId, null, getTaskOffsetSums(prevTasks, standbyTasks), (byte) 0, 0, EMPTY_CLIENT_TAGS);
     }
 
     public static SubscriptionInfo getInfo(final ProcessId processId,
@@ -275,7 +275,7 @@ public final class AssignmentTestUtils {
                                            final Set<TaskId> standbyTasks,
                                            final String userEndPoint) {
         return new SubscriptionInfo(
-            LATEST_SUPPORTED_VERSION, LATEST_SUPPORTED_VERSION, processId, userEndPoint, getTaskOffsetSums(prevTasks, standbyTasks), (byte) 0, 0, EMPTY_CLIENT_TAGS);
+                LATEST_SUPPORTED_VERSION, LATEST_SUPPORTED_VERSION, processId, userEndPoint, getTaskOffsetSums(prevTasks, standbyTasks), (byte) 0, 0, EMPTY_CLIENT_TAGS);
     }
 
     public static SubscriptionInfo getInfo(final ProcessId processId,
@@ -283,7 +283,7 @@ public final class AssignmentTestUtils {
                                            final Set<TaskId> standbyTasks,
                                            final byte uniqueField) {
         return new SubscriptionInfo(
-            LATEST_SUPPORTED_VERSION, LATEST_SUPPORTED_VERSION, processId, null, getTaskOffsetSums(prevTasks, standbyTasks), uniqueField, 0, EMPTY_CLIENT_TAGS);
+                LATEST_SUPPORTED_VERSION, LATEST_SUPPORTED_VERSION, processId, null, getTaskOffsetSums(prevTasks, standbyTasks), uniqueField, 0, EMPTY_CLIENT_TAGS);
     }
 
     public static SubscriptionInfo getInfo(final ProcessId processId,
@@ -292,7 +292,7 @@ public final class AssignmentTestUtils {
                                            final byte uniqueField,
                                            final Map<String, String> clientTags) {
         return new SubscriptionInfo(
-            LATEST_SUPPORTED_VERSION, LATEST_SUPPORTED_VERSION, processId, null, getTaskOffsetSums(prevTasks, standbyTasks), uniqueField, 0, clientTags);
+                LATEST_SUPPORTED_VERSION, LATEST_SUPPORTED_VERSION, processId, null, getTaskOffsetSums(prevTasks, standbyTasks), uniqueField, 0, clientTags);
     }
 
     // Stub offset sums for when we only care about the prev/standby task sets, not the actual offsets
@@ -316,12 +316,12 @@ public final class AssignmentTestUtils {
                                       final Map<ProcessId, ClientState> assignedStates,
                                       final StringBuilder failureContext) {
         assertValidAssignment(
-            numStandbyReplicas,
-            0,
-            statefulTasks,
-            statelessTasks,
-            assignedStates,
-            failureContext
+                numStandbyReplicas,
+                0,
+                statefulTasks,
+                statelessTasks,
+                assignedStates,
+                failureContext
         );
     }
 
@@ -346,31 +346,31 @@ public final class AssignmentTestUtils {
         final AtomicInteger remainingWarmups = new AtomicInteger(maxWarmupReplicas);
 
         final TreeMap<TaskId, Set<ProcessId>> misassigned =
-            assignments
-                .entrySet()
-                .stream()
-                .filter(entry -> {
-                    final int expectedActives = 1;
-                    final boolean isStateless = statelessTasks.contains(entry.getKey());
-                    final int expectedStandbys = isStateless ? 0 : numStandbyReplicas;
-                    // We'll never assign even the expected number of standbys if they don't actually fit in the cluster
-                    final int expectedAssignments = Math.min(
-                        assignedStates.size(),
-                        expectedActives + expectedStandbys
-                    );
-                    final int actualAssignments = entry.getValue().size();
-                    if (actualAssignments == expectedAssignments) {
-                        return false; // not misassigned
-                    } else {
-                        if (actualAssignments == expectedAssignments + 1 && remainingWarmups.get() > 0) {
-                            remainingWarmups.getAndDecrement();
-                            return false; // it's a warmup, so it's fine
+                assignments
+                    .entrySet()
+                    .stream()
+                    .filter(entry -> {
+                        final int expectedActives = 1;
+                        final boolean isStateless = statelessTasks.contains(entry.getKey());
+                        final int expectedStandbys = isStateless ? 0 : numStandbyReplicas;
+                        // We'll never assign even the expected number of standbys if they don't actually fit in the cluster
+                        final int expectedAssignments = Math.min(
+                            assignedStates.size(),
+                            expectedActives + expectedStandbys
+                        );
+                        final int actualAssignments = entry.getValue().size();
+                        if (actualAssignments == expectedAssignments) {
+                            return false; // not misassigned
                         } else {
-                            return true; // misassigned
+                            if (actualAssignments == expectedAssignments + 1 && remainingWarmups.get() > 0) {
+                                remainingWarmups.getAndDecrement();
+                                return false; // it's a warmup, so it's fine
+                            } else {
+                                return true; // misassigned
+                            }
                         }
-                    }
-                })
-                .collect(entriesToMap(TreeMap::new));
+                    })
+                    .collect(entriesToMap(TreeMap::new));
 
         if (!misassigned.isEmpty()) {
             assertThat("Found some over- or under-assigned tasks in the final assignment with " + numStandbyReplicas +
@@ -418,7 +418,7 @@ public final class AssignmentTestUtils {
         double minStateful = Double.MAX_VALUE;
         for (final ClientState clientState : clientStates.values()) {
             final Set<TaskId> statefulTasks =
-                intersection(HashSet::new, clientState.assignedTasks(), allStatefulTasks);
+                    intersection(HashSet::new, clientState.assignedTasks(), allStatefulTasks);
             final double statefulTaskLoad = 1.0 * statefulTasks.size() / clientState.capacity();
             maxStateful = Math.max(maxStateful, statefulTaskLoad);
             minStateful = Math.min(minStateful, statefulTaskLoad);
@@ -472,7 +472,7 @@ public final class AssignmentTestUtils {
 
     static TaskSkewReport analyzeTaskAssignmentBalance(final Map<ProcessId, ClientState> clientStates, final int skewThreshold) {
         final Function<Integer, Map<ProcessId, AtomicInteger>> initialClientCounts =
-            i -> clientStates.keySet().stream().collect(Collectors.toMap(c -> c, c -> new AtomicInteger(0)));
+                i -> clientStates.keySet().stream().collect(Collectors.toMap(c -> c, c -> new AtomicInteger(0)));
 
         final Map<Integer, Map<ProcessId, AtomicInteger>> subtopologyToClientsWithPartition = new TreeMap<>();
         for (final Map.Entry<ProcessId, ClientState> entry : clientStates.entrySet()) {
@@ -573,10 +573,10 @@ public final class AssignmentTestUtils {
         @Override
         public String toString() {
             return "TaskSkewReport{" +
-                "maxTaskSkew=" + maxTaskSkew +
-                ", skewedSubtopologies=" + skewedSubtopologies +
-                ", subtopologyToClientsWithPartition=" + subtopologyToClientsWithPartition +
-                '}';
+                    "maxTaskSkew=" + maxTaskSkew +
+                    ", skewedSubtopologies=" + skewedSubtopologies +
+                    ", subtopologyToClientsWithPartition=" + subtopologyToClientsWithPartition +
+                    '}';
         }
     }
 
@@ -603,16 +603,16 @@ public final class AssignmentTestUtils {
             for (int j = 0; j < partitionSize; j++) {
                 final Node[] replica = getRandomReplica(nodeList, i, j);
                 partitionInfoSet.add(
-                    new PartitionInfo(TOPIC_PREFIX + i, j, replica[0], replica, replica));
+                        new PartitionInfo(TOPIC_PREFIX + i, j, replica[0], replica, replica));
             }
         }
 
         return new Cluster(
-            "cluster",
-            new HashSet<>(nodeList),
-            partitionInfoSet,
-            Collections.emptySet(),
-            Collections.emptySet()
+                "cluster",
+                new HashSet<>(nodeList),
+                partitionInfoSet,
+                Collections.emptySet(),
+                Collections.emptySet()
         );
     }
 
@@ -637,8 +637,8 @@ public final class AssignmentTestUtils {
         for (int i = 0; i < tpSize; i++) {
             for (int j = 0; j < partitionSize; j++) {
                 taskTopicPartitionMap.put(new TaskId(i, j), new HashSet<>(List.of(
-                    new TopicPartition(topicName + i, j),
-                    new TopicPartition(topicName + ((i + 1) % tpSize), j))
+                        new TopicPartition(topicName + i, j),
+                        new TopicPartition(topicName + ((i + 1) % tpSize), j))
                 ));
             }
         }
@@ -677,10 +677,10 @@ public final class AssignmentTestUtils {
         final StreamsConfig streamsConfig = new StreamsConfig(configProps(StreamsConfig.RACK_AWARE_ASSIGNMENT_STRATEGY_MIN_TRAFFIC));
         final MockClientSupplier mockClientSupplier = new MockClientSupplier();
         final MockInternalTopicManager mockInternalTopicManager = new MockInternalTopicManager(
-            time,
-            streamsConfig,
-            mockClientSupplier.restoreConsumer,
-            false
+                time,
+                streamsConfig,
+                mockClientSupplier.restoreConsumer,
+                false
         );
 
         final Set<String> changelogNames = new HashSet<>();
@@ -693,7 +693,7 @@ public final class AssignmentTestUtils {
 
                 final Node[] replica = getRandomReplica(nodeList, i, j);
                 final TopicPartitionInfo info = new TopicPartitionInfo(j, replica[0],
-                    Arrays.asList(replica), Arrays.asList(replica));
+                        Arrays.asList(replica), Arrays.asList(replica));
 
                 topicPartitionInfo.computeIfAbsent(topicName, tp -> new ArrayList<>()).add(info);
             }
@@ -741,7 +741,7 @@ public final class AssignmentTestUtils {
         }
 
         final Set<TaskId> missingTaskIds = taskLags.keySet().stream().filter(id -> !taskIds.contains(id)).collect(
-            Collectors.toSet());
+                Collectors.toSet());
         if (!missingTaskIds.isEmpty()) {
             throw new IllegalArgumentException(missingTaskIds + " missing in all task ids " + taskIds);
         }
@@ -774,85 +774,85 @@ public final class AssignmentTestUtils {
 
     static Cluster getClusterForAllTopics() {
         return new Cluster(
-            "cluster",
-            Set.of(NODE_0, NODE_1, NODE_2, NODE_3, NODE_4),
-            Set.of(
-                PI_0_0,
-                PI_0_1,
-                PI_0_2,
-                PI_0_3,
-                PI_0_4,
-                PI_0_5,
-                PI_0_6,
-                PI_1_0,
-                PI_1_1,
-                PI_1_2,
-                PI_1_3,
-                PI_2_0,
-                PI_2_1,
-                PI_2_2,
-                PI_2_3,
-                PI_3_0,
-                PI_3_1,
-                PI_3_2
-            ),
-            Collections.emptySet(),
-            Collections.emptySet()
+                "cluster",
+                Set.of(NODE_0, NODE_1, NODE_2, NODE_3, NODE_4),
+                Set.of(
+                        PI_0_0,
+                        PI_0_1,
+                        PI_0_2,
+                        PI_0_3,
+                        PI_0_4,
+                        PI_0_5,
+                        PI_0_6,
+                        PI_1_0,
+                        PI_1_1,
+                        PI_1_2,
+                        PI_1_3,
+                        PI_2_0,
+                        PI_2_1,
+                        PI_2_2,
+                        PI_2_3,
+                        PI_3_0,
+                        PI_3_1,
+                        PI_3_2
+                ),
+                Collections.emptySet(),
+                Collections.emptySet()
         );
     }
 
     static Map<TaskId, Set<TopicPartition>> getTaskTopicPartitionMapForAllTasks() {
         return mkMap(
-            mkEntry(TASK_0_0, Set.of(TP_0_0)),
-            mkEntry(TASK_0_1, Set.of(TP_0_1)),
-            mkEntry(TASK_0_2, Set.of(TP_0_2)),
-            mkEntry(TASK_0_3, Set.of(TP_0_3)),
-            mkEntry(TASK_0_4, Set.of(TP_0_4)),
-            mkEntry(TASK_0_5, Set.of(TP_0_5)),
-            mkEntry(TASK_0_6, Set.of(TP_0_6)),
-            mkEntry(TASK_1_0, Set.of(TP_1_0)),
-            mkEntry(TASK_1_1, Set.of(TP_1_1)),
-            mkEntry(TASK_1_2, Set.of(TP_1_2)),
-            mkEntry(TASK_1_3, Set.of(TP_1_3)),
-            mkEntry(TASK_2_0, Set.of(TP_2_0)),
-            mkEntry(TASK_2_1, Set.of(TP_2_1)),
-            mkEntry(TASK_2_2, Set.of(TP_2_2)),
-            mkEntry(TASK_2_3, Set.of(TP_2_3)),
-            mkEntry(TASK_3_0, Set.of(TP_3_0)),
-            mkEntry(TASK_3_1, Set.of(TP_3_1)),
-            mkEntry(TASK_3_2, Set.of(TP_3_2))
+                mkEntry(TASK_0_0, Set.of(TP_0_0)),
+                mkEntry(TASK_0_1, Set.of(TP_0_1)),
+                mkEntry(TASK_0_2, Set.of(TP_0_2)),
+                mkEntry(TASK_0_3, Set.of(TP_0_3)),
+                mkEntry(TASK_0_4, Set.of(TP_0_4)),
+                mkEntry(TASK_0_5, Set.of(TP_0_5)),
+                mkEntry(TASK_0_6, Set.of(TP_0_6)),
+                mkEntry(TASK_1_0, Set.of(TP_1_0)),
+                mkEntry(TASK_1_1, Set.of(TP_1_1)),
+                mkEntry(TASK_1_2, Set.of(TP_1_2)),
+                mkEntry(TASK_1_3, Set.of(TP_1_3)),
+                mkEntry(TASK_2_0, Set.of(TP_2_0)),
+                mkEntry(TASK_2_1, Set.of(TP_2_1)),
+                mkEntry(TASK_2_2, Set.of(TP_2_2)),
+                mkEntry(TASK_2_3, Set.of(TP_2_3)),
+                mkEntry(TASK_3_0, Set.of(TP_3_0)),
+                mkEntry(TASK_3_1, Set.of(TP_3_1)),
+                mkEntry(TASK_3_2, Set.of(TP_3_2))
         );
     }
 
     static Map<Subtopology, Set<TaskId>> getTasksForTopicGroup() {
         return mkMap(
-            mkEntry(new Subtopology(0, null), Set.of(TASK_0_0, TASK_0_1, TASK_0_2, TASK_0_3, TASK_0_4, TASK_0_5, TASK_0_6)),
-            mkEntry(new Subtopology(1, null), Set.of(TASK_1_0, TASK_1_1, TASK_1_2, TASK_1_3)),
-            mkEntry(new Subtopology(2, null), Set.of(TASK_2_0, TASK_2_1, TASK_2_2, TASK_2_3)),
-            mkEntry(new Subtopology(3, null), Set.of(TASK_3_0, TASK_3_1, TASK_3_2))
+                mkEntry(new Subtopology(0, null), Set.of(TASK_0_0, TASK_0_1, TASK_0_2, TASK_0_3, TASK_0_4, TASK_0_5, TASK_0_6)),
+                mkEntry(new Subtopology(1, null), Set.of(TASK_1_0, TASK_1_1, TASK_1_2, TASK_1_3)),
+                mkEntry(new Subtopology(2, null), Set.of(TASK_2_0, TASK_2_1, TASK_2_2, TASK_2_3)),
+                mkEntry(new Subtopology(3, null), Set.of(TASK_3_0, TASK_3_1, TASK_3_2))
         );
     }
 
     static Map<TaskId, Set<TopicPartition>> getTaskChangelogMapForAllTasks() {
         return mkMap(
-            mkEntry(TASK_0_0, Set.of(CHANGELOG_TP_0_0)),
-            mkEntry(TASK_0_1, Set.of(CHANGELOG_TP_0_1)),
-            mkEntry(TASK_0_2, Set.of(CHANGELOG_TP_0_2)),
-            mkEntry(TASK_0_3, Set.of(CHANGELOG_TP_0_3)),
-            mkEntry(TASK_0_4, Set.of(CHANGELOG_TP_0_4)),
-            mkEntry(TASK_0_5, Set.of(CHANGELOG_TP_0_5)),
-            mkEntry(TASK_0_6, Set.of(CHANGELOG_TP_0_6)),
-            mkEntry(TASK_1_0, Set.of(CHANGELOG_TP_1_0)),
-            mkEntry(TASK_1_1, Set.of(CHANGELOG_TP_1_1)),
-            mkEntry(TASK_1_2, Set.of(CHANGELOG_TP_1_2)),
-            mkEntry(TASK_1_3, Set.of(CHANGELOG_TP_1_3)),
-            mkEntry(TASK_2_0, Set.of(CHANGELOG_TP_2_0)),
-            mkEntry(TASK_2_1, Set.of(CHANGELOG_TP_2_1)),
-            mkEntry(TASK_2_2, Set.of(CHANGELOG_TP_2_2)),
-            mkEntry(TASK_2_3, Set.of(CHANGELOG_TP_2_3)),
-            mkEntry(TASK_3_0, Set.of(CHANGELOG_TP_3_0)),
-            mkEntry(TASK_3_1, Set.of(CHANGELOG_TP_3_1)),
-            mkEntry(TASK_3_2, Set.of(CHANGELOG_TP_3_2))
+                mkEntry(TASK_0_0, Set.of(CHANGELOG_TP_0_0)),
+                mkEntry(TASK_0_1, Set.of(CHANGELOG_TP_0_1)),
+                mkEntry(TASK_0_2, Set.of(CHANGELOG_TP_0_2)),
+                mkEntry(TASK_0_3, Set.of(CHANGELOG_TP_0_3)),
+                mkEntry(TASK_0_4, Set.of(CHANGELOG_TP_0_4)),
+                mkEntry(TASK_0_5, Set.of(CHANGELOG_TP_0_5)),
+                mkEntry(TASK_0_6, Set.of(CHANGELOG_TP_0_6)),
+                mkEntry(TASK_1_0, Set.of(CHANGELOG_TP_1_0)),
+                mkEntry(TASK_1_1, Set.of(CHANGELOG_TP_1_1)),
+                mkEntry(TASK_1_2, Set.of(CHANGELOG_TP_1_2)),
+                mkEntry(TASK_1_3, Set.of(CHANGELOG_TP_1_3)),
+                mkEntry(TASK_2_0, Set.of(CHANGELOG_TP_2_0)),
+                mkEntry(TASK_2_1, Set.of(CHANGELOG_TP_2_1)),
+                mkEntry(TASK_2_2, Set.of(CHANGELOG_TP_2_2)),
+                mkEntry(TASK_2_3, Set.of(CHANGELOG_TP_2_3)),
+                mkEntry(TASK_3_0, Set.of(CHANGELOG_TP_3_0)),
+                mkEntry(TASK_3_1, Set.of(CHANGELOG_TP_3_1)),
+                mkEntry(TASK_3_2, Set.of(CHANGELOG_TP_3_2))
         );
     }
 
@@ -861,50 +861,46 @@ public final class AssignmentTestUtils {
         final StreamsConfig streamsConfig = new StreamsConfig(configProps(StreamsConfig.RACK_AWARE_ASSIGNMENT_STRATEGY_MIN_TRAFFIC));
         final MockClientSupplier mockClientSupplier = new MockClientSupplier();
         final MockInternalTopicManager mockInternalTopicManager = new MockInternalTopicManager(
-            time,
-            streamsConfig,
-            mockClientSupplier.restoreConsumer,
-            false
+                time,
+                streamsConfig,
+                mockClientSupplier.restoreConsumer,
+                false
         );
 
         final MockInternalTopicManager spyTopicManager = spy(mockInternalTopicManager);
         doReturn(
-            mkMap(
-                mkEntry(
-                    CHANGELOG_TP_0_NAME, Arrays.asList(
-                        new TopicPartitionInfo(0, NODE_0, Arrays.asList(REPLICA_0), Collections.emptyList()),
-                        new TopicPartitionInfo(1, NODE_1, Arrays.asList(REPLICA_1), Collections.emptyList()),
-                        new TopicPartitionInfo(2, NODE_1, Arrays.asList(REPLICA_1), Collections.emptyList()),
-                        new TopicPartitionInfo(3, NODE_2, Arrays.asList(REPLICA_2), Collections.emptyList()),
-                        new TopicPartitionInfo(4, NODE_3, Arrays.asList(REPLICA_3), Collections.emptyList()),
-                        new TopicPartitionInfo(5, NODE_4, Arrays.asList(REPLICA_4), Collections.emptyList()),
-                        new TopicPartitionInfo(6, NODE_0, Arrays.asList(REPLICA_0), Collections.emptyList())
-                    )
-                ),
-                mkEntry(
-                    CHANGELOG_TP_1_NAME, Arrays.asList(
-                        new TopicPartitionInfo(0, NODE_2, Arrays.asList(REPLICA_2), Collections.emptyList()),
-                        new TopicPartitionInfo(1, NODE_3, Arrays.asList(REPLICA_3), Collections.emptyList()),
-                        new TopicPartitionInfo(2, NODE_0, Arrays.asList(REPLICA_0), Collections.emptyList()),
-                        new TopicPartitionInfo(3, NODE_4, Arrays.asList(REPLICA_4), Collections.emptyList())
-                    )
-                ),
-                mkEntry(
-                    CHANGELOG_TP_2_NAME, Arrays.asList(
-                        new TopicPartitionInfo(0, NODE_1, Arrays.asList(REPLICA_1), Collections.emptyList()),
-                        new TopicPartitionInfo(1, NODE_2, Arrays.asList(REPLICA_2), Collections.emptyList()),
-                        new TopicPartitionInfo(2, NODE_4, Arrays.asList(REPLICA_4), Collections.emptyList()),
-                        new TopicPartitionInfo(3, NODE_3, Arrays.asList(REPLICA_3), Collections.emptyList())
-                    )
-                ),
-                mkEntry(
-                    CHANGELOG_TP_3_NAME, Arrays.asList(
-                        new TopicPartitionInfo(0, NODE_4, Arrays.asList(REPLICA_4), Collections.emptyList()),
-                        new TopicPartitionInfo(1, NODE_3, Arrays.asList(REPLICA_3), Collections.emptyList()),
-                        new TopicPartitionInfo(2, NODE_1, Arrays.asList(REPLICA_1), Collections.emptyList())
-                    )
+                mkMap(
+                        mkEntry(
+                                CHANGELOG_TP_0_NAME, Arrays.asList(
+                            new TopicPartitionInfo(0, NODE_0, Arrays.asList(REPLICA_0), Collections.emptyList()),
+                            new TopicPartitionInfo(1, NODE_1, Arrays.asList(REPLICA_1), Collections.emptyList()),
+                            new TopicPartitionInfo(2, NODE_1, Arrays.asList(REPLICA_1), Collections.emptyList()),
+                            new TopicPartitionInfo(3, NODE_2, Arrays.asList(REPLICA_2), Collections.emptyList()),
+                            new TopicPartitionInfo(4, NODE_3, Arrays.asList(REPLICA_3), Collections.emptyList()),
+                            new TopicPartitionInfo(5, NODE_4, Arrays.asList(REPLICA_4), Collections.emptyList()),
+                            new TopicPartitionInfo(6, NODE_0, Arrays.asList(REPLICA_0), Collections.emptyList())
+                        )),
+                        mkEntry(
+                                CHANGELOG_TP_1_NAME, Arrays.asList(
+                            new TopicPartitionInfo(0, NODE_2, Arrays.asList(REPLICA_2), Collections.emptyList()),
+                            new TopicPartitionInfo(1, NODE_3, Arrays.asList(REPLICA_3), Collections.emptyList()),
+                            new TopicPartitionInfo(2, NODE_0, Arrays.asList(REPLICA_0), Collections.emptyList()),
+                            new TopicPartitionInfo(3, NODE_4, Arrays.asList(REPLICA_4), Collections.emptyList())
+                        )),
+                        mkEntry(
+                                CHANGELOG_TP_2_NAME, Arrays.asList(
+                            new TopicPartitionInfo(0, NODE_1, Arrays.asList(REPLICA_1), Collections.emptyList()),
+                            new TopicPartitionInfo(1, NODE_2, Arrays.asList(REPLICA_2), Collections.emptyList()),
+                            new TopicPartitionInfo(2, NODE_4, Arrays.asList(REPLICA_4), Collections.emptyList()),
+                            new TopicPartitionInfo(3, NODE_3, Arrays.asList(REPLICA_3), Collections.emptyList())
+                        )),
+                        mkEntry(
+                                CHANGELOG_TP_3_NAME, Arrays.asList(
+                            new TopicPartitionInfo(0, NODE_4, Arrays.asList(REPLICA_4), Collections.emptyList()),
+                            new TopicPartitionInfo(1, NODE_3, Arrays.asList(REPLICA_3), Collections.emptyList()),
+                            new TopicPartitionInfo(2, NODE_1, Arrays.asList(REPLICA_1), Collections.emptyList())
+                        ))
                 )
-            )
         ).when(spyTopicManager).getTopicPartitionInfo(anySet());
         return spyTopicManager;
     }
@@ -971,13 +967,13 @@ public final class AssignmentTestUtils {
 
     static Map<ProcessId, Map<String, Optional<String>>> getProcessRacksForAllProcess() {
         return mkMap(
-            mkEntry(PID_1, mkMap(mkEntry("1", Optional.of(RACK_0)))),
-            mkEntry(PID_2, mkMap(mkEntry("1", Optional.of(RACK_1)))),
-            mkEntry(PID_3, mkMap(mkEntry("1", Optional.of(RACK_2)))),
-            mkEntry(PID_4, mkMap(mkEntry("1", Optional.of(RACK_3)))),
-            mkEntry(PID_5, mkMap(mkEntry("1", Optional.of(RACK_4)))),
-            mkEntry(PID_6, mkMap(mkEntry("1", Optional.of(RACK_0)))),
-            mkEntry(PID_7, mkMap(mkEntry("1", Optional.of(RACK_1))))
+                mkEntry(PID_1, mkMap(mkEntry("1", Optional.of(RACK_0)))),
+                mkEntry(PID_2, mkMap(mkEntry("1", Optional.of(RACK_1)))),
+                mkEntry(PID_3, mkMap(mkEntry("1", Optional.of(RACK_2)))),
+                mkEntry(PID_4, mkMap(mkEntry("1", Optional.of(RACK_3)))),
+                mkEntry(PID_5, mkMap(mkEntry("1", Optional.of(RACK_4)))),
+                mkEntry(PID_6, mkMap(mkEntry("1", Optional.of(RACK_0)))),
+                mkEntry(PID_7, mkMap(mkEntry("1", Optional.of(RACK_1))))
         );
     }
 
@@ -987,16 +983,16 @@ public final class AssignmentTestUtils {
 
     static RackAwareTaskAssignor getRackAwareTaskAssignor(final AssignmentConfigs configs, final Map<Subtopology, Set<TaskId>> taskForTopicGroup) {
         return spy(
-            new RackAwareTaskAssignor(
-                getClusterForAllTopics(),
-                getTaskTopicPartitionMapForAllTasks(),
-                getTaskChangelogMapForAllTasks(),
-                taskForTopicGroup,
-                getProcessRacksForAllProcess(),
-                mockInternalTopicManagerForChangelog(),
-                configs,
-                new MockTime()
-            )
+                new RackAwareTaskAssignor(
+                        getClusterForAllTopics(),
+                        getTaskTopicPartitionMapForAllTasks(),
+                        getTaskChangelogMapForAllTasks(),
+                        taskForTopicGroup,
+                        getProcessRacksForAllProcess(),
+                        mockInternalTopicManagerForChangelog(),
+                        configs,
+                        new MockTime()
+                )
         );
     }
 
@@ -1022,12 +1018,11 @@ public final class AssignmentTestUtils {
             .entrySet()
             .stream()
             .collect(
-                Collectors.toMap(
-                    Entry::getKey,
-                    entry -> new ClientState(entry.getValue())
-                )
-            )
-        );
+                    Collectors.toMap(
+                            Entry::getKey,
+                            entry -> new ClientState(entry.getValue())
+                    )
+        ));
     }
 
     static synchronized Random getRandom() {
